<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
<LinearLayout

    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.MainActivity"
    android:orientation="vertical"
    android:background="#FFECB3"

    >

    <!--
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg"
        android:scaleType="centerCrop"
        android:alpha="0.7"
        />
-->

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="32sp"
        android:textColor="@color/Black"
        android:layout_marginTop="24sp"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-condensed"
        />

    <!-- Q1 -->
    <!-- Vertical LinearLayout-->
    <LinearLayout
        android:id="@+id/Layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignBottom="@id/title"
        >
        <TextView
            android:id="@+id/Q1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/Q1"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="16sp"
            android:textSize="20sp"
            android:textColor="@color/Black"
            />
        <!-- Relative LinearLayout-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <Button
                android:id="@+id/Q1_A"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="16sp"
                android:layout_marginLeft="24sp"
                android:text="@string/France"
                android:onClick="result"
                android:background="@drawable/button_selector"
                />

            <Button
                android:id="@+id/Q1_B"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="16sp"
                android:layout_marginLeft="16sp"
                android:layout_toRightOf="@id/Q1_A"
                android:text="@string/Italian"
                android:onClick="result"
                android:background="@drawable/button_selector"
                />

            <Button
                android:id="@+id/Q1_C"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="16sp"
                android:layout_marginLeft="16sp"
                android:layout_toRightOf="@id/Q1_B"
                android:text="@string/Arabic"
                android:onClick="result"
                android:background="@drawable/button_selector"
                />

        </RelativeLayout>

    </LinearLayout>


    <!-- Q2 -->
    <!-- Vertical LinearLayout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/Q2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/Q2"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="16sp"
            android:textSize="20sp"
            android:textColor="@color/Black"
            />
        <!-- Relative LinearLayout-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <Button
                android:id="@+id/Q2_A"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="16sp"
                android:layout_marginLeft="24sp"
                android:text="@string/France"
                android:onClick="result"
                android:background="@drawable/button_selector"

                />

            <Button
                android:id="@+id/Q2_B"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="16sp"
                android:layout_marginLeft="16sp"
                android:layout_toRightOf="@id/Q2_A"
                android:text="@string/Italian"
                android:onClick="result"
                android:background="@drawable/button_selector"
                />

            <Button
                android:id="@+id/Q2_C"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="16sp"
                android:layout_marginLeft="16sp"
                android:layout_toRightOf="@id/Q2_B"
                android:text="@string/Arabic"
                android:onClick="result"
                android:background="@drawable/button_selector"
                />

        </RelativeLayout>

    </LinearLayout>

    <!-- Q2 -->
    <!-- Vertical LinearLayout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/Q3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/Q3"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="16sp"
            android:textSize="20sp"
            android:textColor="@color/Black"
            />
        <!-- Relative LinearLayout-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <Button
                android:id="@+id/Q3_A"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="16sp"
                android:layout_marginLeft="24sp"
                android:text="@string/France"
                android:onClick="result"
                android:background="@drawable/button_selector"

                />

            <Button
                android:id="@+id/Q3_B"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="16sp"
                android:layout_marginLeft="16sp"
                android:layout_toRightOf="@id/Q3_A"
                android:text="@string/Italian"
                android:onClick="result"
                android:background="@drawable/button_selector"
                />

            <Button
                android:id="@+id/Q3_C"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="16sp"
                android:layout_marginLeft="16sp"
                android:layout_toRightOf="@id/Q3_B"
                android:text="@string/Arabic"
                android:onClick="result"
                android:background="@drawable/button_selector"
                />

        </RelativeLayout>

    </LinearLayout>

    <!-- Q4 -->
    <!-- Vertical LinearLayout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/Q4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/Q4"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="16sp"
            android:textSize="20sp"
            android:textColor="@color/Black"
            />
        <!-- Relative LinearLayout-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <Button
                android:id="@+id/Q4_A"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="16sp"
                android:layout_marginLeft="24sp"
                android:text="@string/Japanese"
                android:onClick="result"
                android:background="@drawable/button_selector"

                />

            <Button
                android:id="@+id/Q4_B"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="16sp"
                android:layout_marginLeft="16sp"
                android:layout_toRightOf="@id/Q4_A"
                android:text="@string/Italian"
                android:onClick="result"
                android:background="@drawable/button_selector"
                />

            <Button
                android:id="@+id/Q4_C"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="16sp"
                android:layout_marginLeft="16sp"
                android:layout_toRightOf="@id/Q4_B"
                android:text="@string/Arabic"
                android:onClick="result"
                android:background="@drawable/button_selector"
                />

        </RelativeLayout>

    </LinearLayout>

    <!-- Q5 -->
    <!-- Vertical LinearLayout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="16dp"
        >
        <TextView
            android:id="@+id/Q5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/Q5"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="16sp"
            android:textSize="20sp"
            android:textColor="@color/Black"
            />
        <!-- Relative LinearLayout-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <Button
                android:id="@+id/Q5_A"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="16sp"
                android:layout_marginLeft="24sp"
                android:text="@string/France"
                android:onClick="result"
                android:background="@drawable/button_selector"

                />

            <Button
                android:id="@+id/Q5_B"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="16sp"
                android:layout_marginLeft="16sp"
                android:layout_toRightOf="@id/Q5_A"
                android:text="@string/Italian"
                android:onClick="result"
                android:background="@drawable/button_selector"
                />

            <Button
                android:id="@+id/Q5_C"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="16sp"
                android:layout_marginLeft="16sp"
                android:layout_toRightOf="@id/Q5_B"
                android:text="@string/Chinese"
                android:onClick="result"
                android:background="@drawable/button_selector"
                />

        </RelativeLayout>

    </LinearLayout>



</LinearLayout>
</ScrollView>